# carcasonne-rust

./: .gitignore  Cargo.toml
api/: Cargo.toml
api/src/: main.rs
carcasonne-app/: Cargo.toml
carcasonne-app/src/: game.rs  main.rs
carcasonne-core/: Cargo.toml
carcasonne-core/src/: action.rs  builder.rs  context.rs  game_state.rs  input_handler.rs  layout.rs  lib.rs  model.rs  renderer.rs  state.rs
carcasonne-core/src/builder/: game_builder.rs  tile_builder.rs  tile_feature_builder.rs
carcasonne-core/src/factory/: game_factory.rs  tile_factory.rs
carcasonne-core/src/layout/: node.rs  point.rs  size.rs
carcasonne-core/src/model/: game.rs  tile.rs  tile_extension.rs  tile_feature.rs
carcasonne-core/src/state/: game_state.rs
carcasonne-input/carcasonne-console-input/: Cargo.toml
carcasonne-input/carcasonne-console-input/src/: input_handler.rs
carcasonne-ui/carcasonne-game-ui/: Cargo.toml
carcasonne-ui/carcasonne-game-ui/src/: ui_component.rs
carcasonne-ui/carcasonne-text-ui/: Cargo.toml
carcasonne-ui/carcasonne-text-ui/src/: char_drawing.rs  color.rs  frame.rs  lib.rs  renderable.rs  renderer.rs
carcasonne_app/: Cargo.toml
carcasonne_app/old/: old_main.rs
carcasonne_app/old/model/: game.rs  lib.rs  renderer.rs  (+1 more)
carcasonne_app/src/: main.rs
carcasonne_core/info/: info.rs
carcasonne_core/src/: factory.rs  lib.rs  model.rs
carcasonne_ui/carcasonne_text_ui/: Cargo.toml
game/: Cargo.toml
game/src/: main.rs
model/: Cargo.toml
model/src/: board.rs  builder.rs  game.rs  lib.rs  pawn.rs  player.rs  scoreboard.rs  side.rs  tile.rs
(+41 files in other folders)
